src-tauri/src/output/snapshots/annot_lib__output__snapshot_tests__single_line_annotation.snap
---
source: src/output/snapshot_tests.rs
expression: output
---
src/lib.rs:5
   4 |     line 4 content
>  5 |     line 5 content
     └──> Fix this bug
