src-tauri/src/output/snapshots/annot_lib__output__snapshot_tests__single_tag.snap
---
source: src/output/snapshot_tests.rs
expression: output
---
TAGS:
  [# SECURITY] Review for security vulnerabilities

auth.rs:5
   4 |     line 4 content
>  5 |     line 5 content
     └──> [# SECURITY] Validate user input here
