src-tauri/src/output/snapshots/annot_lib__output__snapshot_tests__terraform_multiple_regions.snap
---
source: src/output/snapshot_tests.rs
expression: output
---
TERRAFORM:

content.md:5-8
    4 |     line 4 content
>   5 |     line 5 content
>   6 |     line 6 content
>   7 |     line 7 content
>   8 |     line 8 content
      └──> Express via detailed table and prose. Give this slightly more weight.

---

content.md:15-18
   14 |     line 14 content
>  15 |     line 15 content
>  16 |     line 16 content
>  17 |     line 17 content
>  18 |     line 18 content
      └──> Make this minimal. This needs a different direction.
