src-tauri/src/output/snapshots/annot_lib__output__snapshot_tests__terraform_pin_and_dissolve.snap
---
source: src/output/snapshot_tests.rs
expression: output
---
TERRAFORM:

gravity.md:3-4
    2 |     line 2 content
>   3 |     line 3 content
>   4 |     line 4 content
      └──> Preserve this exactly as written.

---

gravity.md:12-14
   11 |     line 11 content
>  12 |     line 12 content
>  13 |     line 13 content
>  14 |     line 14 content
      └──> Dissolve this as a unit, integrating its essence into surroundings.
