src-tauri/src/output/snapshots/annot_lib__output__snapshot_tests__terraform_reframe.snap
---
source: src/output/snapshot_tests.rs
expression: output
---
TERRAFORM:

reframe.md:5-8
   4 |     line 4 content
>  5 |     line 5 content
>  6 |     line 6 content
>  7 |     line 7 content
>  8 |     line 8 content
     └──> Same content, reframed from a different angle.
