src-tauri/src/output/snapshots/annot_lib__output__snapshot_tests__terraform_with_annotations.snap
---
source: src/output/snapshot_tests.rs
expression: output
---
TERRAFORM:

mixed.md:5-8
    4 |     line 4 content
>   5 |     line 5 content
>   6 |     line 6 content
>   7 |     line 7 content
>   8 |     line 8 content
      └──> Present as a detailed list.

---

mixed.md:15-16
   14 |     line 14 content
>  15 |     line 15 content
>  16 |     line 16 content
      └──> This needs clarification
